--- a/structure.html
+++ b/structure.html
@@ -51,7 +51,6 @@
       transform: translateX(26px);
     }
 
-    /* Rounded sliders */
     .slider.round {
       border-radius: 34px;
     }
@@ -93,6 +92,13 @@
       <span class="slider round"></span>
     </label>
     <span class="toggle-label">Revert New Font</span>
+  </div>
+  <div class="toggle-container">
+    <label class="switch">
+      <input type="checkbox" id="toggle4">
+      <span class="slider round"></span>
+    </label>
+    <span class="toggle-label">Hide Credit if under $1.00</span>
   </div>
   <script src="main.js"></script>
 </body>
