Show badge unlock dates
Show badge unlock dates

--- a/structure.html
+++ b/structure.html
@@ -5,7 +5,7 @@
   <style>
 
     html {
-        height: 335px;
+        height: 385px;
         width: 400px;
     }
 
@@ -114,6 +114,13 @@
       <span class="slider round"></span>
     </label>
     <span class="toggle-label">Remove the Get Premium button on the left side of home</span>
+  </div>
+  <div class="toggle-container">
+    <label class="switch">
+      <input type="checkbox" id="toggle7">
+      <span class="slider round"></span>
+    </label>
+    <span class="toggle-label">Show badge unlock dates on badge page</span>
   </div>
   <script src="main.js"></script>
 </body>
