--- a/structure.html
+++ b/structure.html
@@ -5,7 +5,7 @@
   <style>
 
     html {
-        height: 385px;
+        height: 430px;
         width: 400px;
     }
 
@@ -121,6 +121,13 @@
       <span class="slider round"></span>
     </label>
     <span class="toggle-label">Show badge unlock dates on badge page</span>
+  </div>
+  <div class="toggle-container">
+    <label class="switch">
+      <input type="checkbox" id="toggle8">
+      <span class="slider round"></span>
+    </label>
+    <span class="toggle-label">Add commas to badge information</span>
   </div>
   <script src="main.js"></script>
 </body>
