Add Remove the Today's Picks and Recommended for you on the top home page
Add Remove the Today's Picks and Recommended for you on the top home page

--- a/structure.html
+++ b/structure.html
@@ -5,8 +5,8 @@
   <style>
 
     html {
-        height: 430px;
-        width: 400px;
+        height: 475px;
+        width: 525px;
     }
 
     .switch {
@@ -128,6 +128,13 @@
       <span class="slider round"></span>
     </label>
     <span class="toggle-label">Add commas to badge information</span>
+  </div>
+  <div class="toggle-container">
+    <label class="switch">
+      <input type="checkbox" id="toggle9">
+      <span class="slider round"></span>
+    </label>
+    <span class="toggle-label">Remove the Today's Picks and Recommended for you on the top home page</span>
   </div>
   <script src="main.js"></script>
 </body>
