Added avatar item creation/updated date
Added avatar item creation/updated date and bug fixes

--- a/structure.html
+++ b/structure.html
@@ -5,7 +5,7 @@
   <style>
 
     html {
-        height: 475px;
+        height: 525px;
         width: 525px;
     }
 
@@ -135,6 +135,13 @@
       <span class="slider round"></span>
     </label>
     <span class="toggle-label">Remove the Today's Picks and Recommended for you on the top home page</span>
+  </div>
+  <div class="toggle-container">
+    <label class="switch">
+      <input type="checkbox" id="toggle10">
+      <span class="slider round"></span>
+    </label>
+    <span class="toggle-label">Add Creation and Updated dates back onto avatar item pages.</span>
   </div>
   <script src="main.js"></script>
 </body>
