update roblox corporate buzz words
update roblox corporate buzz words

--- a/structure.html
+++ b/structure.html
@@ -85,7 +85,7 @@
       <input type="checkbox" id="toggle2">
       <span class="slider round"></span>
     </label>
-    <span class="toggle-label">Rename Charts to Discover</span>
+    <span class="toggle-label">Revert all roblox corporate buzz words</span>
   </div>
   <div class="toggle-container">
     <label class="switch">
